Add user update. Extend user model
