# user-service/internal/dto/user_dto.go
@@ -10,9 +10,18 @@ type UserResponse struct {
 	Username     string
 	PostKarma    int
 	CommentKarma int
+	Name         *string
+	Description  *string
+	Birthday     *time.Time
 	CreatedAt    time.Time
 }
 
 type UserToCreate struct {
 	Username string
+}
+
+type UserDetailsToUpdate struct {
+	Name        *string
+	Description *string
+	Birthday    *time.Time
 }
